# mufrog

./: .gitignore  .gitmodules  Pipfile  pyproject.toml  requirements.txt
api/: matcher.py  pyproject.toml
downloaded_songs/: Alex Warren - Ordinary (Official Video)-u2ah9tWTkmk.webm  Alicia Keys - No One (Official Music Video)-rywUS-ohqeE.webm  Benson Boone - Beautiful Things (Official Music Video)-Oa_RSwwpPaA.webm  Berlin - Take My Breath Away (Official Video - Top Gun)-Bx51eegLTY8.webm  Beyoncé - Halo-bnVUHWCynig.webm  Brett Young - In Case You Didn't Know-7qaHdHpSjX8.webm  Bruno Mars - Just The Way You Are (Official Music Video)-LjhCEhWiKXk.webm  Calum Scott, Leona Lewis - You Are The Reason (Duet Version)-ByfFurjQDb0.webm  Caroline Kingsbury - Shock Treatment (Official Music Video)-_-QKvoV2ofs.webm  Charlie Puth - One Call Away [Official Video]-BxuY9FET9Y4.webm  Dayna Madison - Medicine-CFqublkytfc.webm  James Arthur - Say You Won't Let Go-0yW7w8F2TVA.webm  Jason Mraz - I'm Yours (Official Video) [4K Remaster]-EkHTsc9PU2A.webm  Jessie J - Flashlight (from Pitch Perfect 2) (Official Video)-DzwkcbTQ7ZE.webm  Katy Perry - Unconditionally (Official)-XjwZAa2EjKA.webm  Lady Gaga - Always Remember Us This Way (from A Star Is Born) (Official Music Video)-5vheNbQlsyU.webm  vowl. - taiyla-pTzyGMacu5k.webm  (+14 more)
mufrog_app/: DOWNLOAD_SETUP.md  README.md  __init__.py  app.py  config.py  data_loader.py  emotion_recipes.py  emotion_song_map.py  mood_classifier.py  playlist_downloader.py  pyproject.toml  recommender.py  requirements.txt  run.py  song_map_visualizer.py  ui_components.py
(+20 files in other folders)
