[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.3",
    "transformers>=4.44.0",
    "torch==2.6.0+cu126",
    "torchvision==0.21.0+cu126",
    "torchaudio==2.6.0+cu126",
    "langchain>=0.3.23",
]

[tool.uv.sources]
torch = {index = "pytorch-cu126"}
torchvision = {index = "pytorch-cu126"}
torchaudio = {index = "pytorch-cu126"}

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
