[project]
name = "mufrog-app"
version = "0.1.0"
description = "MuFrog Music Emotion Analysis Demo App"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.34.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yt-dlp>=2025.6.9",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
]
